# rs-algo-bot

./: Cargo.toml  README.md  deploy.sh  playbook.yml
rs_algo_bot/: Cargo.toml  Dockerfile
rs_algo_bot/deployment/Stoch/chart/: config.yaml
rs_algo_bot/deployment/audnzd/chart/: config.yaml  values.yaml
rs_algo_bot/deployment/audusd/chart/: config.yaml
rs_algo_bot/deployment/bb-rev-h1/chart/: Chart.yaml  config.yaml
rs_algo_bot/deployment/bb-rev-m1/chart/: config.yaml
rs_algo_bot/deployment/bb-rev-m30/chart/: config.yaml
rs_algo_bot/deployment/bb-rev-m5/chart/: config.yaml  values.yaml
rs_algo_bot/deployment/bb-rev-mtf-ls/chart/: config.yaml
rs_algo_bot/deployment/bb-rev-mtf-m5/chart/: Chart.yaml  config.yaml
rs_algo_bot/deployment/bb-rev/chart/: config.yaml
rs_algo_bot/deployment/bbmb-dogecoin-m15/chart/: config.yaml
rs_algo_bot/deployment/bbrev-bitcoin-m15/chart/: config.yaml
rs_algo_bot/deployment/bbrev-bitcoin-m30/chart/: config.yaml
rs_algo_bot/deployment/bbrev-bitcoin-m5/chart/: config.yaml  values.yaml
rs_algo_bot/deployment/bbrev-cardano-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-dogecoin-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-ethereum-m15/chart/: config.yaml
rs_algo_bot/deployment/bbrev-ethereum-m30/chart/: config.yaml
rs_algo_bot/deployment/bbrev-ethereum-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-eurchf-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-eursusd-m15/chart/: config.yaml
rs_algo_bot/deployment/bbrev-eursusd-m30/chart/: config.yaml
rs_algo_bot/deployment/bbrev-eursusd-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-gbpusd-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-nzdchf-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-usdchf-m15/chart/: config.yaml
rs_algo_bot/deployment/bbrev-usdchf-m30/chart/: config.yaml
rs_algo_bot/deployment/bbrev-usdchf-m5/chart/: config.yaml
rs_algo_bot/deployment/bbrev-usdjpy-m15/chart/: config.yaml
rs_algo_bot/deployment/bbrev-usdjpy-m30/chart/: config.yaml
rs_algo_bot/deployment/bbrev-usdjpy-m5/chart/: config.yaml
rs_algo_bot/deployment/cadjpy/chart/: config.yaml  config_1.9.yaml  config_2.5.yaml
rs_algo_bot/deployment/chart/: Chart.yaml  config.yaml  values.yaml
rs_algo_bot/deployment/chart/templates2/: deployment.yaml
rs_algo_bot/deployment/dual-macd/chart/: config.yaml
rs_algo_bot/deployment/ema-50200-ls/chart/: config.yaml
rs_algo_bot/deployment/eurchf/chart/: config.yaml  config_2.8.yaml  config_3.2.yaml  values.yaml
rs_algo_bot/deployment/eurusd/chart/: config.yaml  values.yaml
rs_algo_bot/deployment/gbpusd/chart/: config.yaml  config_1.871.yaml  config_1.93.yaml  config_139.yaml  values.yaml
rs_algo_bot/deployment/roles/vars/: main.yml
rs_algo_bot/deployment/stoch-m1/chart/: config.yaml  values.yaml
rs_algo_bot/deployment/stoch-m5/chart/: config.yaml  values.yaml
rs_algo_bot/deployment/usdcad/chart/: config.yaml  values.yaml
rs_algo_bot/deployment/usdchf/chart/: config.yaml  config_1.26.yaml  config_1.87.yaml  values.yaml
rs_algo_bot/deployment/usdjpy/chart/: config.yaml  (+1 more)
rs_algo_bot/src/: bot.rs  error.rs  main.rs  message.rs  trade.rs
rs_algo_bot/src/helpers/: calc.rs  mod.rs  vars.rs
rs_algo_bot/src/strategies/: bollinger_bands_middle_band.rs  bollinger_bands_reversals.rs  bollinger_bands_reversals2_mt_macd.rs  bollinger_bands_reversals_atr.rs  bollinger_bands_reversals_buy.rs  bollinger_bands_reversals_buy_exit.rs  bollinger_bands_reversals_buy_exit_close.rs  bollinger_bands_reversals_buy_exit_direction.rs  bollinger_bands_reversals_buy_exit_hv.rs  bollinger_bands_reversals_buy_exit_noclose.rs  bollinger_bands_reversals_buy_exit_noclose_2.rs  bollinger_bands_reversals_buy_sell.rs  bollinger_bands_reversals_buy_sell_b.rs  bollinger_bands_reversals_buy_sell_direction.rs  bollinger_bands_reversals_close.rs  bollinger_bands_reversals_mt_macd.rs  bollinger_bands_reversals_rsi.rs  bollinger_bands_reversals_sell.rs  bollinger_bands_reversals_sell_atr.rs  bollinger_bands_sell.rs  bollinger_bands_sell_rsi.rs  ema_50200.rs  ema_ribbon.rs  ema_ribbon_close.rs  ema_scalping.rs  ema_scalping2.rs  engulfing.rs  macd_dual.rs  mod.rs  num_bars.rs  num_bars_atr.rs  num_bars_atr_dis.rs  pullback.rs  stats.rs  stoch.rs  strategy.rs
rs_algo_ws_server/: Cargo.toml  Dockerfile
rs_algo_ws_server/data/: transform.sh
rs_algo_ws_server/deployment/chart/: Chart.yaml  config.yaml  values.yaml
rs_algo_ws_server/src/: clients.rs  error.rs  hb.rs  heart_beat.rs  main.rs  main_copy.rs  message.rs  server.rs  session.rs
rs_algo_ws_server/src/db/: bot.rs  instrument.rs  mod.rs  mongo.rs  session.rs
rs_algo_ws_server/src/handlers/: historic.rs  mod.rs  session.rs  state.rs  stream.rs
rs_algo_ws_server/src/helpers/: uuid.rs
rs_algo_ws_server/src/services/: ws.rs
rs_algo_ws_server/src_old/: message.rs  server.rs  session.rs  session_old.rs
(+263 files in other folders)
