[package]
name = "rs_algo_ws_server"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-channel = "0.3"
futures = "0.3.21"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.58"
thiserror = "1.0.31"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
chrono = {version = "0.4.19",  features = ["serde"] }
dotenv = "0.15.0"
async-trait = "0.1.56"
env_logger = "0.10.0"
log = "0.4"
mongodb = {version="2.2.2", features=["bson-uuid-0_8"]}
bson = "2.3.0"
csv = "1.1"
#rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", rev = "cd4d8db", features = ["broker","websocket"]}
rs_algo_shared = { path = "../../rs_algo_shared", features = ["broker","websocket"] }

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1

