[package]
name = "rs_algo_ws_server"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[dependencies]
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-channel = "0.3"
futures = "0.3.21"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.75"
thiserror = "1.0.47"
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chrono = {version = "0.4.19",  features = ["serde"] }
dotenv = "0.15.0"
async-trait = "0.1.73"
env_logger = "0.10.0"
log = "0.4"
mongodb = {version="2.2.2", features=["bson-uuid-0_8"]}
bson = "2.3.0"
#rs_algo_shared = {git = "https://github.com/pmagaz/rs_algo_shared", rev = "1d18ccd", features = ["broker","websocket"]}
rs_algo_shared = { path = "../../rs_algo_shared", features = ["broker","websocket"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
#codegen-units = 1
